[gd_scene load_steps=4 format=3 uid="uid://b6sqxs7h44x5x"]

[ext_resource type="PackedScene" uid="uid://cle4um2lspktn" path="res://minijeu_13/player.tscn" id="1_7huq0"]
[ext_resource type="Script" path="res://game.gd" id="1_mdapt"]
[ext_resource type="PackedScene" uid="uid://cyf6h5cd6vc0s" path="res://minijeu_13/food.tscn" id="2_5cvuk"]

[node name="Node" type="Node"]
script = ExtResource("1_mdapt")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.870588, 1, 0.984314, 1)

[node name="player" parent="." instance=ExtResource("1_7huq0")]
position = Vector2(177, 153)
scale = Vector2(0.3, 0.3)

[node name="food" parent="." instance=ExtResource("2_5cvuk")]
position = Vector2(329, 195)
scale = Vector2(0.2, 0.2)

[node name="food2" parent="." instance=ExtResource("2_5cvuk")]
position = Vector2(727, 421)
scale = Vector2(0.2, 0.2)

[node name="TEXT" type="CanvasLayer" parent="."]

[node name="win_state" type="Label" parent="TEXT"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="time" type="Label" parent="TEXT"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="explanation" type="Label" parent="TEXT"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.45098, 0.00392157, 0.745098, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 30

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -38.5
offset_right = 63.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Start
"

[node name="Button2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -77.0
offset_right = 92.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Restart
"

[node name="Button3" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "to menu"

[node name="Label" type="Label" parent="Button3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "coins :"

[connection signal="area_entered" from="food" to="food" method="_on_area_entered"]
[connection signal="area_shape_entered" from="food" to="food" method="_on_area_shape_entered"]
[connection signal="area_entered" from="food2" to="food2" method="_on_area_entered"]
[connection signal="area_shape_entered" from="food2" to="food2" method="_on_area_shape_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
